SecondLevelLaunch: -fixed timeout settings in browser, wrong config file has been used SubConfiguration: -finer locking to avoid long blocking AccountController: -refactoring -holds a map to all known multihosters to speed up access ClipboardMonitoring: -add base href for parsing if available -some refactoring LAFOptions: -fixed synch UpdateController: -now correct rescans after plugin update PackageControllerTable: -fixed synch access to children DownloadWatchDog: -also see changes in CrossSystem.fixPathSeperators -fixes #9014 -fixes #8606 -fixes #5990 -fixes #8552 -fixes #7687 -fixes #9691 -fixes #9739 Extraction: -fixes #9475 -updated mime.type -HJSplit checks for 7Z/RAR Signature -Multi now can handle 7Z/RAR Multipart with 001/002.. format -fixed crashlog reporter, could cause oom and always showed LogUploadDialog -fixes #9755 Host-/CrawlerPluginController: -fixes #9748 SizeColumn: -modified sorter, now sorts after size and number of items Accounts: -fixes #9036 General: -worked on memory usage again, fixes #8192 and refs #9697 PluginSystem: -added getSharedChild for Plugins that define many different hosts, fixes #9697 -reduce memory usage by compiling patterns when needed and gc them after use HosterRuleController: -fixed loading, errors no longer stops the complete load process -allow save AFTER loading -do not restore accounts that are no longer available -optimized restore by using a single accountlist (instead creating it again and again) MYJDownloader: -some optimizations to avoid connections getting killed DownloadLink/DomainInfo/Plugins: -use String.intern where possible (java >=1.7) and much more....
git-svn-id: svn://svn.jdownloader.org/jdownloader/trunk@22559 ebf7c1c2-ba36-0410-9fe8-c592906822b4